--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router": "^6.12.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
