--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "npm": "^9.6.7",
+    "npm": "^9.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +16,8 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
+    "video.js": "^7.21.4",
+    "videojs-hls-quality-selector": "^1.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
