[BUGFIX] Fix Build Path for React Project

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -28,4 +28,4 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            dist s3://longs.iamnew.net
+            build s3://longs.iamnew.net
