--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "axios": "^1.4.0",
     "npm": "^9.6.7",
     "prop-types": "^15.8.1",
+    "rc-progress": "^3.4.2",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
+    "tus-js-client": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
